--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Canvas</title>
   </head>
   <body>
-    Hi sis!!!
+    <h1>style="colour:purple; height:100px; background: pink;">Hi sis!!!</h1>
+    <p>Yass girlboss! Kill it</p>
+    <a href="https://facebook.com">this link directs to facebook</a>
+    <h3>We are here</h3>
   </body>
 </html>
