--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Canvas</title>
   </head>
   <body>
-    <h1>style="colour:purple; height:100px; background: pink;">Hi sis!!!</h1>
+    <h1 style="color: powderblue; height:100px; background-color: pink;">Hi sis!!!</h1>
     <p>Yass girlboss! Kill it</p>
     <a href="https://facebook.com">this link directs to facebook</a>
     <h3>We are here</h3>
