--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
     <p>Yass girlboss! Kill it</p>
     <a href="https://facebook.com">this link directs to facebook</a>
     <h3>We are here</h3>
+    <ul>
+      <li>glitter</li>
+      <li>magic</li>
+    </ul>
+    <ol>
+      <li>mice</li>
+      <li>cats</li>
+      <li>ferrets</li>
+    </ol>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Rank</th>
+      </tr>
+      <td>Lola</td>
+      <td>1</td>
+      <td>Rocky</td>
+      <td>2</td>
+    </table>
   </body>
 </html>
