--- a/index.html
+++ b/index.html
@@ -2,30 +2,15 @@
 <html>
   <head>     
     <title>Canvas</title>
+    <link href="./styles/stylesheets.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
-  <body>
-    <h1 style="color: powderblue; height:100px; background-color: pink;">Hi sis!!!</h1>
-    <p>Yass girlboss! Kill it</p>
-    <a href="https://facebook.com">this link directs to facebook</a>
-    <h3>We are here</h3>
-    <ul>
-      <li>glitter</li>
-      <li>magic</li>
-    </ul>
-    <ol>
-      <li>mice</li>
-      <li>cats</li>
-      <li>ferrets</li>
-    </ol>
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Rank</th>
-      </tr>
-      <td>Lola</td>
-      <td>1</td>
-      <td>Rocky</td>
-      <td>2</td>
-    </table>
+  <body> 
+<div id="container">
+  <div id="card-element" class="card">
+    loove lola
+  </div>
+
+</div>
   </body>
 </html>
