--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body> 
-<div id="container">
-  <div id="card-element" class="card">
-    loove lola
-  </div>
-
-</div>
+    <div id="container">
+      <div id="card-element" class="card">
+        <div class="input-group mb-3">
+         <span class="input-group-text" id="basic-addon1">To Do</span>
+         <input type="text" class="form-control" placeholder="Username" aria-label='to do' aria-describedby="basic-addon1">
+        </div>
+      </div>
+    </div>
+   </div>
   </body>
 </html>
