--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>     
-    <title>Canvas</title>
+    <title>For The Love of Fluff</title>
+    <h1 style="color: aqua; height: 250px;">WELCOME!</h1>
     <link href="./styles/stylesheets.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
@@ -10,10 +11,28 @@
       <div id="card-element" class="card">
         <div class="input-group mb-3">
          <span class="input-group-text" id="basic-addon1">To Do</span>
-         <input type="text" class="form-control" placeholder="Username" aria-label='to do' aria-describedby="basic-addon1">
+         <input type="text" class="form-control" aria-label='to do' aria-describedby="basic-addon1">
         </div>
+      
+
+        <div>
+          <div class="d-grid gap-2">
+            <button class="btn btn-primary" type="button">Add</button>
+          </div>
       </div>
+      <hr />
+    <div>
+      <ul class="list-group">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
     </div>
+    </div>
+
+    
    </div>
   </body>
 </html>
