--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
     <p><b><a href="https://facebook.com" target="_blank">Facebook</a></b></p>
 
     <p><b><a href="https://twitter.com" target="_blank">Twitter</a></b></p>
+    <a href="./about.html">About</a>
   </body>
 </html>
