--- a/Bookings.html
+++ b/Bookings.html
@@ -6,7 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
      </head>
   <body>
- 
+
+    <div class="navbar">
+      <a class="active" href="#"><i class="./index.html"></i> Home</a> 
+      <a href="#"><i class="./contact.html"></i> Contact</a> 
+      <a href="#"><i class="./about.html"></i> Login</a>
+    </div
+
+    <form action="/action_page.php" style="border:1px solid #ccc">
     <form action="/action_page.php" style="border:1px solid #ccc">
       <div class="container">
         <h1>Booking an Appointment</h1>
