--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
      </head>
   <body>
+   
     <ul>
+      <li><a class="active" href="./index.html">Home</a></li>
       <li><a href="./contact.html">Contact</a></li>
-      <li><a href= "./about.html">About</a></li>
       <li><a href="./bookings.html">Bookings</a></li>
-      </ul>
+      <li><a href="./about.html">About</a></li>
+    </ul>
+
       <h2>Found a stray animal and don't want to keep them?Give them to us!</h2>
       <h2>Or are you looking for your own furbaby, if so please come to us.</h2>
     <p>Hello and welcome to our website. Here you can browse for a new fubaby ,put yours up for adoption or you can book a place for them to stay while you go on holiday. </p>
