--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a target="_blank" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBdG50VqGsccVc9stHtzvM9axgFlCHLKRv9w&usqp=CAU ">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBdG50VqGsccVc9stHtzvM9axgFlCHLKRv9w&usqp=CAU  " alt="Northern Lights" width="600" height="400">
       </a>
-      <div class="desc"></div>
+      <div class="desc">This is String bean.He is our resident furry noodle, he loves playing and food.Be careful, he's known to steal food off plates. </div>
     </div>
         
     
